Added Bootstrap 5 SCSS-files to theme.

--- a/src/sass/theme.scss
+++ b/src/sass/theme.scss
@@ -3,7 +3,7 @@
  */
 
 // import Bootstrap 5
-@import '~bootstrap';
+@import 'bootstrap/bootstrap';
 
 // import BootScore 5 styles
 @import 'bootscore-5';
