Show Movie Poster on single Movie Review pages.

--- a/css/theme.css
+++ b/css/theme.css
@@ -11010,7 +11010,10 @@ Custom checkboxes, radios, range, and select on Mac/iOS Safari if custom Sass co
 /**
  * Movie Review styles
  */
-.preamble {
+.single-mbt_movie_review .entry-content {
+  text-align: justify;
+}
+.single-mbt_movie_review .entry-content .preamble {
   font-size: 1.2em;
   font-style: italic;
   margin-bottom: 1rem;
