--- a/src/sass/theme.scss
+++ b/src/sass/theme.scss
@@ -2,6 +2,10 @@
  * Theme Styles
  */
 
+// variables
+@import 'variables';
+@import 'mixins';
+
 // import Bootstrap 5
 @import 'bootstrap/bootstrap';
 
@@ -9,4 +13,6 @@
 @import 'bootscore-5';
 
 // theme style parts
+@import 'buttons';
+@import 'movie_quotes';
 @import 'movie_reviews';
